--- a/index2.html
+++ b/index2.html
@@ -11,12 +11,12 @@
     <div id="container">
         <!-- Image container -->
         <div id="image-container">
-            <img src="last.jpg" alt="Description">
+            <img src="1738932995244file.gif" alt="Description">
         </div>
 
         <!-- Text container -->
         <div id="text-container">
-            <div id="question">See you in Baguio, January 14!</div>
+            <div id="question">See you in Baguio, February 14!</div>
         </div>
     </div>
 </body>
