--- a/index2.html
+++ b/index2.html
@@ -16,7 +16,7 @@
 
         <!-- Text container -->
         <div id="text-container">
-            <div id="question">See you in Baguio, February 14!</div>
+            <div id="question">Happy Birthday!!</div>
         </div>
     </div>
 </body>
