--- a/index2.html
+++ b/index2.html
@@ -16,7 +16,7 @@
 
         <!-- Text container -->
         <div id="text-container">
-            <div id="question">Happy Birthday!!</div>
+            <div id="question">Happy Birthday! See you on September 26 :)</div>
         </div>
     </div>
 </body>
