--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <script src="script.js"></script> <!-- Link to external JavaScript file -->
 
-    <title>Will You Be My Valentine?</title>
+    <title>Date on your birthday?</title>
     <link rel="stylesheet" href="style.css"> <!-- Link to external stylesheet -->
 </head>
 <body>
@@ -16,7 +16,7 @@
           <div class="card">
           <button id="click-here-button" >Click</button>
 
-          <div class="text">Happy</br> Valentine's</br> Day!</div>
+          <div class="text">Happy</br> Birthday!</br> Day!</div>
           <div class="heart"</div>
           </div>
           <div class="hearts">
@@ -41,4 +41,5 @@
           }, 1000); // Match this timeout with the animation duration (1s)
       });</script> <!-- Link to external JavaScript file -->
 </body>
+
 </html>
