--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <div class="card">
           <button id="click-here-button" >Click</button>
 
-          <div class="text">Happy</br> Birthday!</br> Day!</div>
+          <div class="text">Happy</br> Birthday!</br></div>
           <div class="heart"</div>
           </div>
           <div class="hearts">
@@ -43,3 +43,4 @@
 </body>
 
 </html>
+
